# docs/swagger.json
@@ -17,6 +17,45 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
+        "/applications/{application_slug}/validateToken": {
+            "post": {
+                "description": "validate application token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OrganisationApplications"
+                ],
+                "summary": "Show a application token",
+                "operationId": "validate-organisation-application-token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application Slug",
+                        "name": "application_slug",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Validation Body",
+                        "name": "ValidationBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/application.ValidationBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Application"
+                        }
+                    }
+                }
+            }
+        },
         "/media": {
             "get": {
                 "description": "Get all media",
@@ -728,6 +767,50 @@
                 }
             }
         },
+        "/organisations/{organisation_id}/applications/{application_id}/generateToken": {
+            "get": {
+                "description": "Get application token by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OrganisationApplications"
+                ],
+                "summary": "Show a application token by id",
+                "operationId": "get-organisation-application-token-by-id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "X-User",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organisation ID",
+                        "name": "organisation_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Application ID",
+                        "name": "application_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Application"
+                        }
+                    }
+                }
+            }
+        },
         "/organisations/{organisation_id}/applications/{application_id}/users": {
             "get": {
                 "description": "Get all applications users",
@@ -768,10 +851,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/user.appUsers"
-                                }
+                                "$ref": "#/definitions/model.Application"
                             }
                         }
                     }
@@ -1170,6 +1250,21 @@
         }
     },
     "definitions": {
+        "application.ValidationBody": {
+            "type": "object",
+            "required": [
+                "access_token",
+                "secret_token"
+            ],
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "secret_token": {
+                    "type": "string"
+                }
+            }
+        },
         "application.application": {
             "type": "object",
             "required": [
@@ -1253,6 +1348,9 @@
         "model.Application": {
             "type": "object",
             "properties": {
+                "access_token": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1590,20 +1688,6 @@
                 },
                 "social_media_urls": {
                     "type": "string"
-                }
-            }
-        },
-        "user.appUsers": {
-            "type": "object",
-            "properties": {
-                "application": {
-                    "$ref": "#/definitions/model.Application"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.User"
-                    }
                 }
             }
         },
